--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "axios": "^1.9.0",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
@@ -28,6 +31,9 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "@langchain/core": "^0.3.42",
+    "@langchain/openai": "^0.4.4",
+    "langchain": "^0.3.26",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
