--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^14.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "~53.0.9",
     "expo-av": "~15.1.4",
     "expo-blur": "~14.1.4",
@@ -34,6 +37,7 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "lucide-react": "^0.511.0",
     "openai": "^4.100.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
@@ -41,7 +45,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
